[package]
name = "subsidised-medicine-radar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
chrono = { version = "0.4.31", features = ["serde"] }
reqwest = "0.11.22"
scraper = "0.18.1"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.12.0", features = ["full"] }
